src/syntax_analysis/expression/pratt_parsing/infix_expression/tests/snapshots/rust_monkey_interpreter__syntax_analysis__expression__pratt_parsing__infix_expression__tests__test_syntax_analysis_for_infix_expression_case3.snap
---
source: src/syntax_analysis/expression/pratt_parsing/infix_expression/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code))"
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "INFIX": {
            "left_hand": {
              "INTEGER": {
                "integer_token": {
                  "INTEGER": {
                    "literal": "3"
                  }
                }
              }
            },
            "operator_token": "MULTIPLY",
            "right_hand": {
              "INTEGER": {
                "integer_token": {
                  "INTEGER": {
                    "literal": "4"
                  }
                }
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
